Create Context and  Config Api Project

--- a/CoreFluentValidationSample/SampleAPI/appsettings.json
+++ b/CoreFluentValidationSample/SampleAPI/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SampleDb;Persist Security Info=True;User ID=NormSa;Password=Norm@DbSys!Ad38"
 }
