--- a/CoreFluentValidationSample/Entities/Data.csproj
+++ b/CoreFluentValidationSample/Entities/Data.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.11" />
+  </ItemGroup>
+
 </Project>
